--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/carloze11/inedible#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "daisyui": "^2.31.0",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-flash": "^0.0.2",
