--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
   "homepage": "https://github.com/carloze11/inedible#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "connect-mongo": "^4.6.0",
     "daisyui": "^2.31.0",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-flash": "^0.0.2",
     "express-layouts": "^1.0.0",
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
+    "moment": "^2.29.4",
     "mongoose": "^6.6.5",
+    "morgan": "^1.10.0",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "validator": "^13.7.0"
