--- a/config/config.env
+++ b/config/config.env
@@ -1,3 +1,4 @@
 PORT = 3000
 MONGO_URI = mongodb+srv://carloze11:Fh7iz5j3XEZrAvw1@cluster0.jzddbnn.mongodb.net/inedible?retryWrites=true&w=majority
-
+GOOGLE_CLIENT_ID = 976429794494-097gei2perilvdpdrj2mo5avc6vuc7qo.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
