--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "moment": "^2.29.4",
     "mongoose": "^6.6.5",
     "morgan": "^1.10.0",
-    "passport": "^0.5.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "validator": "^13.7.0"
   },
