--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "daisyui": "^2.31.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
+    "events": "^3.3.0",
     "express": "^4.18.2",
     "express-flash": "^0.0.2",
     "express-layouts": "^1.0.0",
@@ -30,6 +31,7 @@
     "moment": "^2.29.4",
     "mongoose": "^6.6.5",
     "morgan": "^1.10.0",
+    "node-fetch": "^2.6.7",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
