--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/carloze11/inedible.git"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT", 
   "bugs": {
     "url": "https://github.com/carloze11/inedible/issues"
   },
