--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/carloze11/inedible.git"
   },
   "author": "",
-  "license": "MIT", 
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/carloze11/inedible/issues"
   },
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "express-flash": "^0.0.2",
     "express-layouts": "^1.0.0",
+    "express-react-views": "^0.11.0",
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
@@ -35,6 +36,8 @@
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
