--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "express-layouts": "^1.0.0",
     "express-react-views": "^0.11.0",
     "express-session": "^1.17.3",
+    "global": "^4.4.0",
+    "materialize-css": "^1.0.0-rc.2",
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
     "mongoose": "^6.6.5",
