--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "passport-local": "^1.0.0",
         "react": "^16.14.0",
         "react-dom": "^16.14.0",
+        "react-router-dom": "^6.4.5",
         "validator": "^13.7.0"
     },
     "devDependencies": {
