--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "bcrypt": "^5.1.0",
         "connect-mongo": "^4.6.0",
+        "cors": "^2.8.5",
         "daisyui": "^2.31.0",
         "dotenv": "^16.0.3",
         "ejs": "^3.1.8",
@@ -29,6 +30,7 @@
         "express-react-views": "^0.11.0",
         "express-session": "^1.17.3",
         "global": "^4.4.0",
+        "google-auth-library": "^8.7.0",
         "materialize-css": "^1.0.0-rc.2",
         "method-override": "^3.0.0",
         "moment": "^2.29.4",
