--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     },
     "homepage": "https://github.com/carloze11/inedible#readme",
     "dependencies": {
+        "axios": "^1.3.4",
         "bcrypt": "^5.1.0",
         "connect-mongo": "^4.6.0",
         "cors": "^2.8.5",
